--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jshint server.js"
+    "test": "jshint ./server/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,5 +13,12 @@
     "express": "^4.14.0",
     "mongodb": "^2.2.5",
     "mongoose": "^4.5.9"
+  },
+  "devDependencies": {
+    "expect": "^1.20.2",
+    "jshint": "^2.9.5",
+    "mocha": "^3.0.2",
+    "nodemon": "^1.10.2",
+    "supertest": "^2.0.0"
   }
 }
