--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha server/**/*.test.js",
-    "test-watch": "nodemon --exec 'npm test'"
+    "test-watch": "nodemon --exec 'npm test'",
+    "debug": "nodemon --inspect ./server/server.js",
+    "start": "nodemon ./server/server.js"
   },
   "author": "",
   "license": "ISC",
