--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "mocha server/**/*.test.js",
     "test-watch": "nodemon --exec 'npm test'",
     "debug": "nodemon --inspect ./server/server.js",
-    "start": "nodemon ./server/server.js"
+    "start": "node ./server/server.js"
   },
   "engines":{
     "node": "8.8.1"
