--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "debug": "nodemon --inspect ./server/server.js",
     "start": "node ./server/server.js"
   },
-  "engines":{
+  "engines": {
     "node": "8.8.1"
   },
   "author": "",
@@ -17,6 +17,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "lodash": "^4.15.0",
     "mongodb": "^2.2.5",
     "mongoose": "^4.5.9"
   },
