--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "export NODE_ENV=test && mocha server/**/*.test.js",
+    "test":
+      "export NODE_ENV=test && nyc --reporter=html --reporter=text mocha server/**/*.test.js",
     "test-watch": "nodemon --exec 'npm test'",
     "debug": "nodemon --inspect ./server/server.js",
-    "start": "node ./server/server.js"
+    "start": "node ./server/server.js",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "engines": {
     "node": "8.8.1"
@@ -22,10 +24,13 @@
     "mongoose": "^4.5.9"
   },
   "devDependencies": {
+    "coveralls": "^3.0.0",
     "expect": "^1.20.2",
+    "istanbul": "^0.4.5",
     "jshint": "^2.9.5",
     "mocha": "^3.0.2",
     "nodemon": "^1.10.2",
+    "nyc": "^11.4.1",
     "supertest": "^2.0.0"
   }
 }
