--- a/package.json
+++ b/package.json
@@ -32,5 +32,11 @@
     "nodemon": "^1.10.2",
     "nyc": "^11.4.1",
     "supertest": "^2.0.0"
-  }
+  },
+   "nyc": {
+      "exclude":[
+        "**/config.js",
+        "**/mongoose.js"
+      ]
+   }
 }
